--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script id="photo-template" type="text/x-handlebars-template">
       <div id={{keyword}}>
         <h2>{{title}}</h2>
-        <img src="{{image_url}}" alt="">
+        <img src="{{image_url}}" alt="{{title}}">
         <p>{{description}}</p>
       </div>
     </script>
